--- a/Style.css
+++ b/Style.css
@@ -4,13 +4,14 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: radial-gradient(circle, #3498db, #e74c3c, #2ecc71);
+    background: linear-gradient(to right, #ffd700, #cdaa7d, #4caf50);
 }
 .container-central{
-    width: 60%; 
-    height: 50%; 
+    width: 65%; 
+    height: 55%; 
     background-color: #f0f0f0;
     text-align: center; 
     padding: 20px; 
-    box-shadow: 2px 4px 6px rgb(11, 11, 11), -3px -3px 5px rgb(74, 74, 74);
+    box-shadow: 2px 4px 6px #d4aa00, -3px -3px 5px #9c803f;
+    background-color: #c8e6c9;
 }
