--- a/Style.css
+++ b/Style.css
@@ -13,6 +13,10 @@ body {
     text-align: center; 
     padding: 20px; 
     box-shadow: 2px 4px 6px #d4aa00, -3px -3px 5px #9c803f;
-    background-color: rgba(200, 230, 201, 0.2);
+    background-color: rgba(200, 230, 201, 0.3
+    );
     border-radius: 10px ;
+}
+h1 {
+    font-family: 'Great Vibes', cursive;
 }
