--- a/Style2.css
+++ b/Style2.css
@@ -6,33 +6,23 @@ body {
     margin: 0;
     background: linear-gradient(to right, #ffd700, #cdaa7d, #4caf50);
 }
-.container-central{
+.Div-geral{
     width: 65%; 
-    height: 55%; 
+    height: 100vh; 
     background-color: #f0f0f0;
     text-align: center; 
-    padding: 20px; 
+    padding: 30px; 
     box-shadow: 2px 4px 6px #d4aa00, -3px -3px 5px #9c803f;
     background-color: rgba(200, 230, 201, 0.3);
-    border-radius: 10px ;
+    margin-top: 40px;
 }
-h1 {
+.h1-list{
+    font-size: 30px;
     font-family: 'Great Vibes', cursive;
-    font-size: 80px;
-    width: auto;
     
- 
-}
-.centro-divisoria{
-    width: 500px;
-    height: 3px;
-    margin: auto;
-    background: linear-gradient(to right, #ffd700, #cdaa7d, #4caf50);
-    margin-top: -60px;
-   
-}
-.rodape{
-    width: auto;
-    height: 40px;
-}
 
+}
+ul{
+    font-size: 1opx;
+    font-family: poppins;
+}
