--- a/estilo.css
+++ b/estilo.css
@@ -23,6 +23,10 @@ h1 {
     
  
 }
+p {
+    font-family: 'Great Vibes', cursive;
+
+}
 .centro-divisoria2{
     width: 500px;
     height: 3px;
@@ -31,15 +35,12 @@ h1 {
     margin-top: -60px;
    
 }
-.rodape{
+.rodape2{
     width: auto;
     height: 40px;
+    margin-top: 40px;
     
     
 }
-nav{
-    align-items: center;
-}
-a{
-    margin: 50px;
-}
+
+
