--- a/estilo.css
+++ b/estilo.css
@@ -28,7 +28,7 @@ p {
 
 }
 .centro-divisoria2{
-    width: 500px;
+    width: 50%;
     height: 3px;
     margin: auto;
     background: linear-gradient(to right, #ffd700, #cdaa7d, #4caf50);
